--- a/ApiEasier.Frontend/documentation/components/EndpointCardListComponent.html
+++ b/ApiEasier.Frontend/documentation/components/EndpointCardListComponent.html
@@ -321,7 +321,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:60</a></div>
                             </td>
                         </tr>
 
@@ -462,8 +462,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="132"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:132</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="133"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:133</a></div>
                         </td>
                     </tr>
 
@@ -531,8 +531,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="144"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:144</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="145"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:145</a></div>
                         </td>
                     </tr>
 
@@ -612,8 +612,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="97"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:97</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="98"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:98</a></div>
                         </td>
                     </tr>
 
@@ -681,8 +681,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="120"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:120</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="121"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:121</a></div>
                         </td>
                     </tr>
 
@@ -750,8 +750,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="85"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:85</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="86"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:86</a></div>
                         </td>
                     </tr>
 
@@ -787,8 +787,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="73"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:73</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="74"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:74</a></div>
                         </td>
                     </tr>
 
@@ -824,8 +824,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="77"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:77</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="78"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:78</a></div>
                         </td>
                     </tr>
 
@@ -861,8 +861,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="173"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:173</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="174"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:174</a></div>
                         </td>
                     </tr>
 
@@ -928,8 +928,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="155"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:155</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="156"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:156</a></div>
                         </td>
                     </tr>
 
@@ -995,8 +995,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="104"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:104</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="105"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:105</a></div>
                         </td>
                     </tr>
 
@@ -1034,8 +1034,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="111"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:111</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="112"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:112</a></div>
                         </td>
                     </tr>
 
@@ -1103,8 +1103,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="124"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:124</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="125"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:125</a></div>
                         </td>
                     </tr>
 
@@ -1142,8 +1142,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="160"
-                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:160</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="161"
+                                    class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:161</a></div>
                         </td>
                     </tr>
 
@@ -1214,7 +1214,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:42</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -1244,7 +1244,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:50</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:51</a></div>
                         </td>
                     </tr>
 
@@ -1279,7 +1279,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:55</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:56</a></div>
                         </td>
                     </tr>
 
@@ -1310,7 +1310,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -1341,7 +1341,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:47</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -1367,7 +1367,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:44</a></div>
                         </td>
                     </tr>
 
@@ -1398,7 +1398,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:44</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -1424,7 +1424,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:48</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:49</a></div>
                         </td>
                     </tr>
 
@@ -1456,7 +1456,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -1477,7 +1477,8 @@
   OnInit,
 } from &#x27;@angular/core&#x27;;
 import { Subscription } from &#x27;rxjs&#x27;;
-import { Endpoint, Entity } from &#x27;../../../../services/service-structure-api&#x27;;
+import { Endpoint } from &quot;../../../../interfaces/Endpoint&quot;;
+import { Entity } from &quot;../../../../interfaces/Entity&quot;;
 import { CommonModule, Location } from &#x27;@angular/common&#x27;;
 import { TuiCardLarge } from &#x27;@taiga-ui/layout&#x27;;
 import { tuiDialog, TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
