--- a/ApiEasier.Frontend/documentation/components/AlertDeleteComponent.html
+++ b/ApiEasier.Frontend/documentation/components/AlertDeleteComponent.html
@@ -106,6 +106,10 @@
                 role="tab" id="templateData-tab" data-bs-toggle="tab" data-link="template">Template</a>
         </li>
         <li class="nav-item">
+            <a href="#styleData" class="nav-link"
+                role="tab" id="styleData-tab" data-bs-toggle="tab" data-link="style">Styles</a>
+        </li>
+        <li class="nav-item">
             <a href="#tree" class="nav-link"
                 role="tab" id="tree-tab" data-bs-toggle="tab" data-link="dom-tree">DOM Tree</a>
         </li>
@@ -120,6 +124,17 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Компонент AlertDeleteComponent предназначен для отображения уведомления при выполнении действия удаления.
+Использует компоненты Taiga UI для управления всплывающим окном уведомления и его опциями.</p>
+<p>Этот компонент является частью системы уведомлений и используется для оповещения пользователей о действиях удаления.
+Интегрируется с сервисом уведомлений Taiga UI для обеспечения единообразного пользовательского опыта.</p>
+<b>Example :</b><div><pre class="line-numbers"><code class="language-html">html
+&lt;app-alert-on-delete&gt;&lt;/app-alert-on-delete&gt;</code></pre></div>
+    </p>
 
 
 
@@ -153,6 +168,10 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-3">styleUrls</td>
+                <td class="col-md-9"><code>./alert-delete.component.css</code></td>
+            </tr>
 
 
 
@@ -163,10 +182,6 @@
 
 
 
-            <tr>
-                <td class="col-md-3">styleUrl</td>
-                <td class="col-md-9"><code>./alert-delete.component.css</code></td>
-            </tr>
 
 
 
@@ -237,10 +252,18 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/data/components/alert-delete/alert-delete.component.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/app/data/components/alert-delete/alert-delete.component.ts:38</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Контекст для компонента TuiPopover, который управляет опциями уведомления.</p>
+<p>Этот контекст внедряется с использованием функции injectContext из Taiga UI.
+Он предоставляет необходимую конфигурацию для всплывающего окна уведомления.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -250,24 +273,46 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { CommonModule, NgForOf } from &#x27;@angular/common&#x27;;
-import { ChangeDetectionStrategy, Component, inject } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { CommonModule } from &#x27;@angular/common&#x27;;
+import { Component } from &#x27;@angular/core&#x27;;
 import type { TuiPopover } from &#x27;@taiga-ui/cdk&#x27;;
 import type { TuiAlertOptions } from &#x27;@taiga-ui/core&#x27;;
-import { TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
-import { injectContext, PolymorpheusComponent } from &#x27;@taiga-ui/polymorpheus&#x27;;
-import { switchMap, takeUntil } from &#x27;rxjs&#x27;;
+import { injectContext } from &#x27;@taiga-ui/polymorpheus&#x27;;
 
+/**
+ * Компонент AlertDeleteComponent предназначен для отображения уведомления при выполнении действия удаления.
+ * Использует компоненты Taiga UI для управления всплывающим окном уведомления и его опциями.
+ *
+ * @remarks
+ * Этот компонент является частью системы уведомлений и используется для оповещения пользователей о действиях удаления.
+ * Интегрируется с сервисом уведомлений Taiga UI для обеспечения единообразного пользовательского опыта.
+ *
+ * @example
+ * html
+ * &lt;app-alert-on-delete&gt;&lt;/app-alert-on-delete&gt;
+ *
+ */
 @Component({
   selector: &#x27;app-alert-on-delete&#x27;,
   imports: [CommonModule],
   templateUrl: &#x27;./alert-delete.component.html&#x27;,
-  styleUrl: &#x27;./alert-delete.component.css&#x27;
+  styleUrls: [&#x27;./alert-delete.component.css&#x27;], 
 })
 export class AlertDeleteComponent {
-  protected readonly context &#x3D;
-  injectContext&lt;TuiPopover&lt;TuiAlertOptions&lt;void&gt;, boolean&gt;&gt;();
-}</code></pre>
+  /**
+   * Контекст для компонента TuiPopover, который управляет опциями уведомления.
+   *
+   * @remarks
+   * Этот контекст внедряется с использованием функции injectContext из Taiga UI.
+   * Он предоставляет необходимую конфигурацию для всплывающего окна уведомления.
+   *
+   * @type {TuiPopover&lt;TuiAlertOptions&lt;void&gt;, boolean&gt;}
+   * @default undefined
+   * @memberof AlertDeleteComponent
+   */
+  protected readonly context &#x3D; injectContext&lt;TuiPopover&lt;TuiAlertOptions&lt;void&gt;, boolean&gt;&gt;();
+}
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="templateData">
@@ -284,6 +329,12 @@ export class AlertDeleteComponent {
 &lt;/button&gt;</code></pre>
     </div>
 
+    <div class="tab-pane fade " id="styleData">
+                <p class="comment">
+                    <code>./alert-delete.component.css</code>
+                </p>
+                <pre class="line-numbers"><code class="language-scss"></code></pre>
+    </div>
 
     <div class="tab-pane fade " id="tree">
         <div id="tree-container"></div>
