--- a/ApiEasier.Frontend/documentation/components/ApiEndpointListComponent.html
+++ b/ApiEasier.Frontend/documentation/components/ApiEndpointListComponent.html
@@ -300,7 +300,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:48</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:46</a></div>
                             </td>
                         </tr>
 
@@ -453,8 +453,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="98"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:98</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="96"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:96</a></div>
                         </td>
                     </tr>
 
@@ -520,8 +520,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="93"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:93</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="91"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:91</a></div>
                         </td>
                     </tr>
 
@@ -599,8 +599,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="122"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:122</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="120"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:120</a></div>
                         </td>
                     </tr>
 
@@ -680,8 +680,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="84"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:84</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="82"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:82</a></div>
                         </td>
                     </tr>
 
@@ -749,8 +749,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="74"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:74</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="72"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:72</a></div>
                         </td>
                     </tr>
 
@@ -786,8 +786,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="61"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:61</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="59"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:59</a></div>
                         </td>
                     </tr>
 
@@ -823,8 +823,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="65"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:65</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="63"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -860,8 +860,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="126"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:126</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="124"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:124</a></div>
                         </td>
                     </tr>
 
@@ -927,8 +927,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="154"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:154</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="152"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:152</a></div>
                         </td>
                     </tr>
 
@@ -1018,8 +1018,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="140"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:140</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="138"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:138</a></div>
                         </td>
                     </tr>
 
@@ -1099,8 +1099,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="113"
-                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:113</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="111"
+                                    class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:111</a></div>
                         </td>
                     </tr>
 
@@ -1176,7 +1176,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:47</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -1202,7 +1202,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:44</a></div>
                         </td>
                     </tr>
 
@@ -1233,7 +1233,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:41</a></div>
                         </td>
                     </tr>
 
@@ -1264,7 +1264,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:48</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -1295,7 +1295,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -1327,7 +1327,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:44</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -1347,11 +1347,9 @@
   OnDestroy,
   OnInit,
 } from &#x27;@angular/core&#x27;;
-import {
-  ApiServiceStructure,
-  Endpoint,
-  Entity,
-} from &#x27;../../../services/service-structure-api&#x27;;
+import { Endpoint } from &quot;../../../interfaces/Endpoint&quot;;
+import { Entity } from &quot;../../../interfaces/Entity&quot;;
+import { ApiServiceStructure } from &quot;../../../interfaces/ApiServiceStructure&quot;;
 import { TuiAccordion } from &#x27;@taiga-ui/experimental&#x27;;
 import { Subscription } from &#x27;rxjs&#x27;;
 import { ActivatedRoute, Router, RouterModule } from &#x27;@angular/router&#x27;;
