--- a/ApiEasier.Frontend/documentation/components/LoadingComponent.html
+++ b/ApiEasier.Frontend/documentation/components/LoadingComponent.html
@@ -106,6 +106,10 @@
                 role="tab" id="templateData-tab" data-bs-toggle="tab" data-link="template">Template</a>
         </li>
         <li class="nav-item">
+            <a href="#styleData" class="nav-link"
+                role="tab" id="styleData-tab" data-bs-toggle="tab" data-link="style">Styles</a>
+        </li>
+        <li class="nav-item">
             <a href="#tree" class="nav-link"
                 role="tab" id="tree-tab" data-bs-toggle="tab" data-link="dom-tree">DOM Tree</a>
         </li>
@@ -120,6 +124,17 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Компонент LoadingComponent предназначен для отображения анимации загрузки с изображением.
+Используется для индикации процесса загрузки данных или выполнения операций.</p>
+<p>Этот компонент отображает статическое изображение, которое может быть заменено на анимацию или другой индикатор загрузки.
+Подходит для использования в различных частях приложения, где требуется показать пользователю, что выполняется загрузка.</p>
+<b>Example :</b><div><pre class="line-numbers"><code class="language-html">html
+&lt;app-loading&gt;&lt;/app-loading&gt;</code></pre></div>
+    </p>
 
 
 
@@ -147,6 +162,10 @@
 
 
 
+            <tr>
+                <td class="col-md-3">styleUrls</td>
+                <td class="col-md-9"><code>./loading.component.css</code></td>
+            </tr>
 
 
 
@@ -157,10 +176,6 @@
 
 
 
-            <tr>
-                <td class="col-md-3">styleUrl</td>
-                <td class="col-md-9"><code>./loading.component.css</code></td>
-            </tr>
 
 
 
@@ -233,10 +248,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/data/components/loading/loading.component.ts:10</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/data/components/loading/loading.component.ts:29</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Путь к изображению, отображаемому во время загрузки.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -248,13 +269,32 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
 
+/**
+ * Компонент LoadingComponent предназначен для отображения анимации загрузки с изображением.
+ * Используется для индикации процесса загрузки данных или выполнения операций.
+ *
+ * @remarks
+ * Этот компонент отображает статическое изображение, которое может быть заменено на анимацию или другой индикатор загрузки.
+ * Подходит для использования в различных частях приложения, где требуется показать пользователю, что выполняется загрузка.
+ *
+ * @example
+ * html
+ * &lt;app-loading&gt;&lt;/app-loading&gt;
+ */
 @Component({
   selector: &#x27;app-loading&#x27;,
   imports: [],
   templateUrl: &#x27;./loading.component.html&#x27;,
-  styleUrl: &#x27;./loading.component.css&#x27;
+  styleUrls: [&#x27;./loading.component.css&#x27;], // Исправлено с styleUrl на styleUrls
 })
 export class LoadingComponent {
+  /**
+   * Путь к изображению, отображаемому во время загрузки.
+   *
+   * @type {string}
+   * @default &quot;assets/dora.png&quot;
+   * @memberof LoadingComponent
+   */
   path: string &#x3D; &quot;assets/dora.png&quot;;
 }
 </code></pre>
@@ -266,6 +306,50 @@ export class LoadingComponent {
 &lt;/div&gt;</code></pre>
     </div>
 
+    <div class="tab-pane fade " id="styleData">
+                <p class="comment">
+                    <code>./loading.component.css</code>
+                </p>
+                <pre class="line-numbers"><code class="language-scss">.loading {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    height: 100vh;
+}
+
+.loader {
+    width: 100px;
+    height: 46px;
+    position: relative;
+    border-bottom: 8px solid #0056a6; /* Увеличиваем толщину линии */
+    border-top: 8px solid #0056a6;    /* Увеличиваем толщину линии */
+    box-sizing: border-box;
+}
+
+.loader:before, .loader:after {
+    content: &quot;&quot;;
+    position: absolute;
+    left: 0;
+    top: -20px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #fff;
+    border: 8px solid #0056a6; /* Увеличиваем толщину линии */
+    box-sizing: border-box;
+    animation: slide 1s infinite ease-in-out alternate;
+}
+
+.loader:after {
+    top: 20px;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes slide {
+    0%, 20% { transform: translateX(70px); }
+    80%, 100% { transform: translateX(-1px); }
+}</code></pre>
+    </div>
 
     <div class="tab-pane fade " id="tree">
         <div id="tree-container"></div>
